# SafEnergy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SafEnergy_Implementation_Verdict.md  plan.md  pyproject.toml  run_dashboard.py  skills-lock.json
.github/agents/: code-reviewer.agent.md  docs-maintainer.agent.md  renewable-forecasting-engineer.agent.md  satellite-weather-data-engineer.agent.md  test-engineer.agent.md  trading-backtest-engineer.agent.md
.github/instructions/: agent_maintenance_workflow.instructions.md  code_writing_behavior.instructions.md  delegation_policy.instructions.md  python_quality_gates.instructions.md  python_renewable_forecasting.instructions.md  qa_readonly.instructions.md  tests.instructions.md
.gsd/: CODEBASE.md  CONTEXT.md  DECISIONS.md  PREFERENCES.md  QUEUE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: CONFIGURATION.md  MVP_SCOPE.md  demo.md  forecast_contract.md  no_training_forecast.md
scripts/: market_forecast_smoke.py  smoke_check.py
src/safenergy/: __init__.py
tests/: conftest.py  test_api.py  test_api_dashboard.py  test_api_dashboard_coverage.py  test_api_health.py  test_api_orchestrator.py  test_api_routes.py  test_backtest.py  test_baselines.py  test_commitment_engine.py  test_commitment_smoke.py  test_dashboard.py  test_evaluate.py  test_explanation.py  test_features.py  test_forecast_models.py  test_forecast_service.py  test_market_forecast_smoke.py  test_no_training_stack.py  test_openapi.py  test_orchestrator.py  test_selector.py  test_signals.py  test_signals_pipeline.py  test_storage.py
(+103 files in other folders)
